<resources>
    <string name="app_name">Kicks</string>
    <string name="action_settings">Settings</string>
    <string name="kick_name_text_view">Kick Name</string>
    <string name="kick_time_textView">11:00</string>
    <string name="location_permission_denied">Please Allow app to access location</string>
    <string name="kick_name_edit_text_hint">What would You Like To Do?</string>
    <string name="location_edit_text_hint">location</string>
    <string name="choose_on_map_button_text">Choose On Map</string>
    <string-array name="kicks_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Go Karting</item>
        <item>Football</item>
        <item>Swimming</item>
        <item>Shooting</item>
        <item>Tennis</item>
    </string-array>
    <string-array name="kicks_dates">
        <item>10 Nov</item>
        <item>03 Mar</item>
        <item>15 Oct</item>
        <item>20 Feb</item>
        <item>09 Sep</item>
        <item>12 Dec</item>
        <item>01 Jan</item>
        <item>30 Jun</item>
        <item>21 Aug</item>
        <item>05 Jul</item>
        <item>12 Apr</item>
    </string-array>
    <string-array name="kicks_time">
        <item>18:00</item>
        <item>16:00</item>
        <item>12:00</item>
        <item>08:00</item>
        <item>17:00</item>
        <item>20:00</item>
        <item>10:00</item>
        <item>00:00</item>
        <item>09:00</item>
        <item>12:00</item>
        <item>18:00</item>
    </string-array>
    <string-array name="already_attending_peeps">
        <item>2</item>
        <item>5</item>
        <item>3</item>
        <item>7</item>
        <item>5</item>
        <item>3</item>
        <item>1</item>
        <item>12</item>
        <item>9</item>
        <item>6</item>
        <item>4</item>
    </string-array>
    <string-array name="required_peeps">
        <item>5</item>
        <item>7</item>
        <item>10</item>
        <item>8</item>
        <item>10</item>
        <item>23</item>
        <item>10</item>
        <item>20</item>
        <item>10</item>
        <item>6</item>
        <item>5</item>
    </string-array>
    <string-array name="kicks_location">
        <item>CBD</item>
        <item>Lavington Mall</item>
        <item>The Junction Mall</item>
        <item>Village Market</item>
        <item>Karura Forest</item>
        <item>Two rivers mall</item>
        <item>Garden City</item>
        <item> Yaya Centre along,Arwings Khodek </item>
        <item>Agro house in CBD</item>
        <item>The clubhouse</item>
        <item>Alchemist</item>
    </string-array>
    <string-array name="kicks_categories">
        <item>For Those About To Rock</item>
        <item>For Those About To Rock</item>
        <item>For Those About To Rock</item>
        <item>For Those About To Rock</item>
        <item>For Those About To Rock</item>
        <item>For Those About To Rock</item>
        <item>For Those About To Rock</item>
        <item>For Those About To Rock</item>
        <item>For Those About To Rock</item>
        <item>For Those About To Rock</item>
        <item>For Those About To Rock</item>
    </string-array>
    <string-array name="kicks_image_urls">
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
    </string-array>
    <string-array name="featured_kicks_Titles">
        <item>For Those About That Life</item>
        <item>For Those About That Life</item>
        <item>For Those About That Life</item>
        <item>For Those About That Life</item>
    </string-array>
    <string-array name="featured_kicks_images">
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
    </string-array>
    <string-array name="featured_kicks_list_images">
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
        <item>https://comps.canstockphoto.com/bowling-eps-vectors_csp2647543.jpg</item>
    </string-array>
    <string-array name="featured_kicks_list_names">
        <item>Bowling</item>
        <item>PaintBall</item>
        <item>Bowling</item>
        <item>PaintBall</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address_edit_text_hint">Email Address</string>
    <string name="confirm_time_date_Title_constant_text">Time &amp; Date</string>
    <string name="example_message">Hey Guys So there is a change of plans the cost was supposed to be 800 but now its 1000</string>
    <string name="example_message_short">Hey There</string>
    <string name="sign_in_welcome_text">Welcome</string>
    <string name="sign_in_back_text">Back</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="your_text">Your</string>
    <string name="names_text">Names</string>
    <string name="first_name_hint_text">First Name</string>
    <string name="username_hint_text">Username</string>
    <string name="second_name_hint_text">Second Name</string>
    <string name="sign_up_one_next_button_text">NEXT</string>
    <string name="contact_text">Contact</string>
    <string name="phone_number_hint_text">Phone Number</string>
    <string name="previous_button_text">Previous</string>
    <string name="keep_everything_text">Keep Everything</string>
    <string name="safe_text">Safe</string>
    <string name="password_hint_text">Password</string>
    <string name="confirm_password_hint_text">Confirm Password</string>
    <string name="upload_profile_picture_text">Upload Profile Picture</string>
    <string name="or_pick_one_text">Or Pick One</string>
    <string name="finish_text_for_efab">FINISH</string>
    <string name="content_description_profile_pic">Image view for profile pic</string>
    <string name="activity_image_image_description">activity Image</string>
    <string name="bowling_and_poker_text">Bowling And Poker</string>
    <string name="calender_icon_image_description">calender icon</string>
    <string name="activity_time_placeholder">17:00 – 19:00</string>
    <string name="activity_date_placeholder">23.05.2020</string>
    <string name="money_icon_content_description">money icon</string>
    <string name="currency_placeholder_text">KES</string>
    <string name="activity_cost_placeholder">800</string>
    <string name="place_icon_content_description">place icon</string>
    <string name="activity_location_placeholder">Village Market</string>
    <string name="activity_tag_placeholder">Bowling</string>
    <string name="activity_host_pic_desciption">host pic</string>
    <string name="host_name_placeholder">Jayson</string>
    <string name="type_a_message_hint_text">Type a message</string>
    <string name="image_for_message_sender_pic_description">Image for message sender Pic</string>
    <string name="message_timestamp_placeholder">13:23</string>
    <string name="sender_name_placeholder">John Doe</string>
    <string name="exit_icon_image_description">exit icon image</string>
    <string name="share_icon_image_description">share icon image</string>
    <string name="activity_location_long_placeholder">Railways Sports Club Tennis court</string>
    <string name="attendee_large_image_description">attendee large image</string>
    <string name="attendee_name_place_holder">John Jane</string>
    <string name="activity_image_description">activity image in dash</string>
    <string name="send_message_icon_image_description">send message icon image</string>
    <string name="activity_time_dash_details_placeholder">5:30 p.m</string>
    <string name="per_person_text">Per Person</string>
    <string name="kick_category_name_placeholder">Cheap Thrills</string>
    <string name="image_for_kick_description">Image For Kick</string>
    <string name="kick_name_placeholder">Monopoly</string>
    <string name="kick_selected_image_description">kick selected image</string>
    <string name="kick_selected_description_text">Get out there and quench your Wanderlust with the rolling hills and the mountains of your choosing</string>
    <string name="available_activity_name_placeholder">Mortal Kombat Tournament</string>
    <string name="available_activity_cost_placeholder">KES 300</string>
    <string name="available_activity_location_placeholder">Extreme Gaming Cafe</string>
    <string name="available_activity_time_placeholder">16:00–18:00 12.05.2020</string>
    <string name="available_activity_image_description">available activity image</string>
    <string name="people_text">People</string>
    <string name="cost_text">Cost</string>
    <string name="activity_title_edit_text_hint">Activity Title</string>
    <string name="search_available_tags_hint_text">Search available tags</string>
    <string name="location_selection_done_button_description">location selection done button</string>
    <string name="set_the_location_text">Set the Location</string>
    <string name="search_a_place_or_drag_the_map_and_position_the_location_you_would_like_under_the_pin_text">Search a place or drag the map and position the location you would like under the pin</string>
    <string name="search_a_place_hint">Search a place</string>
    <string name="pin_image_description">pin image</string>
    <string name="cost_per_person_text">Cost Per Person</string>
    <string name="activity_cost_hint">999</string>
    <string name="image_view_for_request_sender_pic_image_description">Image View For request sender Pic</string>
    <string name="reject_text">Reject</string>
    <string name="add_text">Add</string>
    <string name="done_text">Done</string>
    <string name="change_email_address_text">Change Email Address</string>
    <string name="just_type_your_new_email_address_it_might_require_a_re_authentication_tex">Just type your new email address,it might require a re-authentication</string>
    <string name="johnathandoe_email_com_text">johnathandoe@email.com</string>
    <string name="change_user_name_text">Change User Name</string>
    <string name="just_type_your_new_username_text">Just type your new username</string>
    <string name="username_example_text">Username</string>
    <string name="profile_picture">Profile Pic</string>
    <string name="edit_profile_pic_fab_description">Edit Profile Pic Fab</string>
    <string name="upload_profile_picture_or_pic_one">Upload Profile Picture Or Pic One Below</string>
</resources>