<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chatContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/senderProfilePic"
        android:layout_width="40dp"
        android:visibility="gone"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/image_for_message_sender_pic_description" />

    <LinearLayout
        android:id="@+id/chatMessageSelfLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/chat_self_item_bg"
        android:elevation="10dp"
        android:minHeight="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/senderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sender_name_placeholder"
            android:visibility="gone"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chatMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:maxWidth="170dp"
            android:minWidth="80dp"
            app:autoSizeTextType="uniform"
            android:text="@string/example_message_short" />



    </LinearLayout>
    <TextView
        android:id="@+id/sendTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chatMessageSelfLinearLayout"
        android:layout_alignEnd="@id/chatMessageSelfLinearLayout"
        android:layout_marginEnd="8dp"
        android:text="@string/message_timestamp_placeholder"/>

</RelativeLayout>