<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SignUp.SignUpSetProfilePic">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/profilePictureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/profile_picture"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profilePicImage"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/circleback"
            android:contentDescription="@string/content_description_profile_pic"
            android:src="@drawable/ic_profile_icon_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePictureTextView" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editPicFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-32dp"
            android:backgroundTint="@color/colorMain"
            android:contentDescription="@string/edit_profile_pic_fab_description"
            android:src="@drawable/ic_action_photo"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/profilePicImage"
            app:layout_constraintStart_toEndOf="@+id/profilePicImage" />

        <TextView
            android:id="@+id/picInstructionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/upload_profile_picture_or_pic_one"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePicImage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profilePicsRecycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/doneButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picInstructionsTextView"
            app:spanCount="3" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/done_text"
            android:textAlignment="center"
            android:textColor="@color/textColorSecondaryInverse"
            android:theme="@style/MaterialTheme"
            app:backgroundTint="@color/backgroundInverted"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>